--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -74,6 +74,7 @@
       </form>
     </div>
   </div>
+<!--  Toast-->
   <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;" th:if="${error}">
     <div class="toast-header bg-dark">
       <strong class="mr-auto text-white">Error</strong>
