Therapist save error solved

--- a/src/main/resources/templates/therapists/add-therapist.html
+++ b/src/main/resources/templates/therapists/add-therapist.html
@@ -72,7 +72,7 @@
                 <div class="form-group">
                     <!-- Confirm Password -->
                     <label for="confirmPassword">Confirm Password</label>
-                    <input class="form-control" id="confirmPassword" placeholder="Confirm therapist's password" required th:field="*{confirmPassword}" type="password">
+                    <input class="form-control" id="confirmPassword" placeholder="Confirm therapist's password" required type="password">
                 </div>
 
                 <button class="btn btn-primary" type="submit">Add Therapist</button>
