--- a/src/main/resources/templates/therapists/update-therapist.html
+++ b/src/main/resources/templates/therapists/update-therapist.html
@@ -51,7 +51,7 @@
 
 
 
-                <input th:field="*{id}" type="hidden"/>
+                <input th:field="*{id}" th:value="${therapistToUpdate.id}" type="hidden"/>
                 <button class="btn btn-primary" type="submit">Update</button>
             </form>
         </div>
