--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
-  <script src="js/registration.js"></script>
 </head>
 <body>
 
@@ -91,16 +90,38 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<!-- Script to activate Bootstrap Toast -->
 <script>
   $(document).ready(function () {
+      // Script to activate Bootstrap Toast
       $('.toast').toast({
           autohide: true,
           delay: 5000, // 5 seconds
           animation: true,
           position: 'top-end'
       }).toast('show');
+
+      // Add an event listener to the form on submission
+      $("form").submit(function (event) {
+          // Get the values of the password and confirmPassword fields
+          var password = $("#password").val();
+          var confirmPassword = $("#confirmPassword").val();
+
+          // Check if the passwords match and are at least 6 characters long
+          if (password !== confirmPassword) {
+              // Display an error message
+              $("#passwordError").text("Passwords do not match");
+              event.preventDefault(); // Prevent form submission
+          } else if (password.length < 6) {
+              // Display an error message
+              $("#passwordError").text("Password must be at least 6 characters");
+              event.preventDefault(); // Prevent form submission
+          } else {
+              // Clear any previous error messages
+              $("#passwordError").text("");
+          }
+      });
   });
 </script>
+
 </body>
 </html>
