--- a/src/main/resources/templates/therapists/add-therapist.html
+++ b/src/main/resources/templates/therapists/add-therapist.html
@@ -6,9 +6,7 @@
 
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
-    <script src="js/therapist.js"></script>
 </head>
 <body>
 
@@ -30,23 +28,27 @@
                 <!-- Username -->
                 <div class="form-group">
                     <label for="userName">Username</label>
-                    <input class="form-control" id="userName"  placeholder="Enter therapist's username" required th:field="*{userName}" type="text">
+                    <input class="form-control" id="userName" placeholder="Enter therapist's username" required
+                           th:field="*{userName}" type="text">
                 </div>
                 <!-- Email -->
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input class="form-control" id="email" placeholder="Enter therapist's email address" required th:field="*{email}" type="email">
+                    <input class="form-control" id="email" placeholder="Enter therapist's email address" required
+                           th:field="*{email}" type="email">
                 </div>
                 <!-- Age & Mobile Number -->
                 <!-- Age -->
                 <div class="form-group">
                     <label for="age">Age</label>
-                    <input class="form-control" id="age" placeholder="Enter therapist's age" required th:field="*{age}" type="number">
+                    <input class="form-control" id="age" placeholder="Enter therapist's age" required th:field="*{age}"
+                           type="number">
                 </div>
                 <!-- Mobile Number -->
                 <div class="form-group">
                     <label for="mobileNo">Mobile Number</label>
-                    <input class="form-control" id="mobileNo" placeholder="Enter therapist's mobile number" required th:field="*{mobileNo}" type="text">
+                    <input class="form-control" id="mobileNo" placeholder="Enter therapist's mobile number" required
+                           th:field="*{mobileNo}" type="text">
                 </div>
 
                 <!-- Gender -->
@@ -61,18 +63,21 @@
                 <!-- Address -->
                 <div class="form-group">
                     <label for="address">Address</label>
-                    <input class="form-control" id="address" placeholder="Enter therapist's address" required th:field="*{address}" type="text">
+                    <input class="form-control" id="address" placeholder="Enter therapist's address" required
+                           th:field="*{address}" type="text">
                 </div>
                 <!-- Password & Confirm Password -->
-                <!-- Password -->
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input class="form-control" id="password" placeholder="Enter therapist's password" required th:field="*{password}" type="password">
+                    <input class="form-control" id="password" pattern=".{6,}" placeholder="Enter your password"
+                           required th:field="*{password}" type="password">
                 </div>
                 <div class="form-group">
                     <!-- Confirm Password -->
                     <label for="confirmPassword">Confirm Password</label>
-                    <input class="form-control" id="confirmPassword" placeholder="Confirm therapist's password" required type="password">
+                    <input class="form-control" id="confirmPassword" pattern=".{6,}" placeholder="Confirm your password"
+                           required type="password">
+                    <span class="text-danger" id="passwordError"></span>
                 </div>
 
                 <button class="btn btn-primary" type="submit">Add Therapist</button>
@@ -80,7 +85,8 @@
         </div>
     </div>
     <!--  Toast-->
-    <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;" th:if="${error}">
+    <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;"
+         th:if="${error}">
         <div class="toast-header bg-dark">
             <strong class="mr-auto text-white">Error</strong>
             <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
@@ -96,16 +102,38 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<!-- Script to activate Bootstrap Toast -->
 <script>
-  $(document).ready(function () {
-      $('.toast').toast({
-          autohide: true,
-          delay: 5000, // 5 seconds
-          animation: true,
-          position: 'top-end'
-      }).toast('show');
-  });
+    $(document).ready(function () {
+        // Script to activate Bootstrap Toast
+        $('.toast').toast({
+            autohide: true,
+            delay: 5000, // 5 seconds
+            animation: true,
+            position: 'top-end'
+        }).toast('show');
+
+        // Add an event listener to the form on submission
+        $("form").submit(function (event) {
+            // Get the values of the password and confirmPassword fields
+            var password = $("#password").val();
+            var confirmPassword = $("#confirmPassword").val();
+
+            // Check if the passwords match and are at least 6 characters long
+            if (password !== confirmPassword) {
+                // Display an error message
+                $("#passwordError").text("Passwords do not match");
+                event.preventDefault(); // Prevent form submission
+            } else if (password.length < 6) {
+                // Display an error message
+                $("#passwordError").text("Password must be at least 6 characters");
+                event.preventDefault(); // Prevent form submission
+            } else {
+                // Clear any previous error messages
+                $("#passwordError").text("");
+            }
+        });
+    });
 </script>
+
 </body>
 </html>
