--- a/src/main/resources/templates/therapists/therapist-list.html
+++ b/src/main/resources/templates/therapists/therapist-list.html
@@ -39,7 +39,7 @@
                         <th class="text-center">Mobile</th>
                         <th class="text-center">Gender</th>
                         <th class="text-center">Address</th>
-                        <th class="text-center" th:if="${isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin}">Action</th>
+                        <th class="text-center" th:if="${isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin}" style="width: 100px;">Action</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -51,7 +51,6 @@
                         <td class="text-left" th:text="${therapist.gender}"/>
                         <td class="text-left" th:text="${therapist.address}"/>
                         <td class="text-center" th:if="${isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin}">
-
                             <span>
                                 <a class="btn btn-warning" role="button"
                                    th:href="@{/show-update-therapist-page(id=${therapist.id})}">
