--- a/src/main/resources/templates/therapists/therapist-list.html
+++ b/src/main/resources/templates/therapists/therapist-list.html
@@ -39,7 +39,9 @@
                         <th class="text-center">Mobile</th>
                         <th class="text-center">Gender</th>
                         <th class="text-center">Address</th>
-                        <th class="text-center" th:if="${isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin}" style="width: 100px;">Action</th>
+                        <th class="text-center" style="width: 150px;"
+                            th:if="${isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin}">Action
+                        </th>
                     </tr>
                     </thead>
                     <tbody>
@@ -58,7 +60,8 @@
                                 </a>
                             </span>
                             <span>
-                                <a class="btn btn-danger" role="button" th:href="@{/therapist-delete(id=${therapist.id})}">
+                                <a class="btn btn-danger" role="button"
+                                   th:href="@{/therapist-delete(id=${therapist.id})}">
                                     <i class="fas fa-trash-alt"></i>
                                 </a>
                             </span>
@@ -69,6 +72,15 @@
             </div>
             <a class="mt-3" th:href="@{/}">Back to Home</a>
         </div>
+    </div>
+    <!--  Toast-->
+    <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;"
+         th:if="${success}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Success</strong>
+            <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
+        </div>
+        <div class="toast-body bg-success text-white" th:text="${success}"></div>
     </div>
 </main>
 
@@ -99,6 +111,16 @@
                 }
             }
         });
+    });
+</script>
+<script>
+    $(document).ready(function () {
+        $('.toast').toast({
+            autohide: true,
+            delay: 5000,. // 5 seconds
+            animation: true,
+            position: 'top-end'
+        }).toast('show');
     });
 </script>
 </body>
