--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -12,6 +12,8 @@
         <a class="btn" th:href="@{/show-video-list}">Videos</a>
         <a class="btn" th:href="@{/show-therapist-list}">Therapists</a>
         <a class="btn" th:href="@{/show-discussion-list}">Group Discussions</a>
+        <a class="btn" th:href="@{/show-chat-list}">ChatBot Support</a>
+
         <!-- Add more buttons as needed -->
     </div>
 </div>
