--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -7,12 +7,13 @@
     <div class="sidebar-sticky">
         <!-- Add more links as needed -->
         <a class="btn" th:href="@{/show-blog-list}">Blogs</a>
-<!--        <a th:unless="${user != null}" class="btn" th:href="@{/show-blog-list(userId=${0})}">Blogs</a>-->
         <a class="btn" th:href="@{/show-podcast-list}">Podcasts</a>
         <a class="btn" th:href="@{/show-video-list}">Videos</a>
         <a class="btn" th:href="@{/show-therapist-list}">Therapists</a>
         <a class="btn" th:href="@{/show-discussion-list}">Group Discussions</a>
         <a class="btn" th:href="@{/show-chat-list}">ChatBot Support</a>
+        <a th:if="${(isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin)}" class="btn"
+           th:href="@{/show-not-answered-list}">ChatBot Configuration</a>
 
         <!-- Add more buttons as needed -->
     </div>
